--- a/classes/lux.struct.Queue.html
+++ b/classes/lux.struct.Queue.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -56,20 +56,8 @@
                         </li>
                         <li
                           >
-                          <a href="../modules/lux.pack.html">
-                            lux.pack
-                          </a>
-                        </li>
-                        <li
-                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
                           </a>
                         </li>
                         <li
@@ -194,7 +182,7 @@
 
               <h1>
                 lux.struct.Queue
-                <small>a LUX classe</small>
+                <small>a LUX class</small>
               </h1>
 
               <div class="row" style="height:2em"></div>
@@ -208,6 +196,233 @@
 
 
 
+
+                <h2>
+                  <a name="Constructors_"></a>
+                  Constructors
+                </h2>
+
+                <dl class="function">
+                    <dt>
+                      <a name = "lux.struct.Queue:Queue"></a>
+                      <h3 class="text-primary">
+                        Queue&nbsp;(max)
+                      </h3>
+                    </dt>
+                    <dd>
+                      Default constructor.
+
+
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      <span class="type">integer</span>
+                                  </strong>
+                                  max</kbd>
+                                <p>
+                                   The queue max capacity
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "lux.struct.Queue:fromSequence"></a>
+                      <h3 class="text-primary">
+                        Queue:fromSequence&nbsp;(seq)
+                      </h3>
+                    </dt>
+                    <dd>
+                      Construct from sequence
+
+
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      <span class="type">sequence</span>
+                                  </strong>
+                                  seq</kbd>
+                                <p>
+                                   A sequence containing the new queue&rsquo;s content
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
+
+                <h2>
+                  <a name="Methods_"></a>
+                  Methods
+                </h2>
+
+                <dl class="function">
+                    <dt>
+                      <a name = "obj:isEmpty"></a>
+                      <h3 class="text-primary">
+                        obj:isEmpty&nbsp;()
+                      </h3>
+                    </dt>
+                    <dd>
+                      Tells whether the queue is empty.
+
+
+
+
+                        <h4>Returns:</h4>
+                          <ol>
+
+                              <kbd><strong class="text-type">
+                              <span class="type">boolean</span></strong></kbd>
+                              <p>
+                                True if the queue is empty, false otherwise
+                              </p>
+
+                          </ol>
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "obj:isFull"></a>
+                      <h3 class="text-primary">
+                        obj:isFull&nbsp;()
+                      </h3>
+                    </dt>
+                    <dd>
+                      Tells whether the queue is full.
+
+
+
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "obj:push"></a>
+                      <h3 class="text-primary">
+                        obj:push&nbsp;(item, ...)
+                      </h3>
+                    </dt>
+                    <dd>
+                      Pushes a value into the queue.
+
+
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  item</kbd>
+                                <p>
+
+
+                                </p>
+                                </li>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  ...</kbd>
+                                <p>
+
+
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "obj:pop"></a>
+                      <h3 class="text-primary">
+                        obj:pop&nbsp;(n)
+                      </h3>
+                    </dt>
+                    <dd>
+                      Pops a value from the queue.
+
+
+
+                          <h4>Parameters:</h4>
+                        <ul>
+                              <li>
+                                <kbd>
+                                  <strong class="text-type">
+                                      any
+                                  </strong>
+                                  n</kbd>
+                                <p>
+
+
+                                </p>
+                                </li>
+                        </ul>
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "obj:popAll"></a>
+                      <h3 class="text-primary">
+                        obj:popAll&nbsp;()
+                      </h3>
+                    </dt>
+                    <dd>
+                      Pops all values from the queue.
+
+
+
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                    <dt>
+                      <a name = "obj:popEach"></a>
+                      <h3 class="text-primary">
+                        obj:popEach&nbsp;()
+                      </h3>
+                    </dt>
+                    <dd>
+                      Iterates through the queue popping everything.
+
+
+
+
+
+
+
+                    </dd>
+                    <div class="row" style="height:2em"></div>
+                </dl>
 
 
           </div> <!-- id="content" -->
