--- a/modules/lux.color.html
+++ b/modules/lux.color.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -56,20 +56,8 @@
                         </li>
                         <li
                           >
-                          <a href="../modules/lux.pack.html">
-                            lux.pack
-                          </a>
-                        </li>
-                        <li
-                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
                           </a>
                         </li>
                         <li
@@ -259,7 +247,9 @@
                 <dl class="function">
                     <dt>
                       <a name = "terminal.line"></a>
-                      <h3 class="text-primary">terminal.line&nbsp;(text)</h3>
+                      <h3 class="text-primary">
+                        terminal.line&nbsp;(text)
+                      </h3>
                     </dt>
                     <dd>
                       Print a line with formatted colors.
@@ -287,7 +277,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "terminal.write"></a>
-                      <h3 class="text-primary">terminal.write&nbsp;(text)</h3>
+                      <h3 class="text-primary">
+                        terminal.write&nbsp;(text)
+                      </h3>
                     </dt>
                     <dd>
                       Writes to the standard output with formatted colors.
