--- a/prototypes/lux.class.html
+++ b/prototypes/lux.class.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -56,20 +56,8 @@
                         </li>
                         <li
                           >
-                          <a href="../modules/lux.pack.html">
-                            lux.pack
-                          </a>
-                        </li>
-                        <li
-                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
                           </a>
                         </li>
                         <li
@@ -222,7 +210,9 @@
                 <dl class="function">
                     <dt>
                       <a name = "class:instance"></a>
-                      <h3 class="text-primary">class:instance&nbsp;(obj, ...)</h3>
+                      <h3 class="text-primary">
+                        class:instance&nbsp;(obj, ...)
+                      </h3>
                     </dt>
                     <dd>
                       Defines how an instance of the class should be constructed.
@@ -275,7 +265,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "class:inherit"></a>
-                      <h3 class="text-primary">class:inherit&nbsp;(another_class)</h3>
+                      <h3 class="text-primary">
+                        class:inherit&nbsp;(another_class)
+                      </h3>
                     </dt>
                     <dd>
                       Makes this class inherit from another.
@@ -324,7 +316,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "class:__call"></a>
-                      <h3 class="text-primary">class:__call&nbsp;(...)</h3>
+                      <h3 class="text-primary">
+                        class:__call&nbsp;(...)
+                      </h3>
                     </dt>
                     <dd>
                       The class constructor.
@@ -365,7 +359,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "class:super"></a>
-                      <h3 class="text-primary">class:super&nbsp;(obj, ...)</h3>
+                      <h3 class="text-primary">
+                        class:super&nbsp;(obj, ...)
+                      </h3>
                     </dt>
                     <dd>
                       Calls the parent class' constructor.
