--- a/prototypes/lux.datastruct.List.html
+++ b/prototypes/lux.datastruct.List.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -56,20 +56,8 @@
                         </li>
                         <li
                           >
-                          <a href="../modules/lux.pack.html">
-                            lux.pack
-                          </a>
-                        </li>
-                        <li
-                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
                           </a>
                         </li>
                         <li
@@ -216,7 +204,9 @@
                 <dl class="function">
                     <dt>
                       <a name = "List:__construct"></a>
-                      <h3 class="text-primary">List:__construct&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:__construct&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       The list&rsquo;s constructor may take a sequence of values to initialize the list
@@ -232,7 +222,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:empty"></a>
-                      <h3 class="text-primary">List:empty&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:empty&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Tells if the list is empty.
@@ -257,7 +249,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:size"></a>
-                      <h3 class="text-primary">List:size&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:size&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Tells the size of the list.
@@ -282,7 +276,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:pushBack"></a>
-                      <h3 class="text-primary">List:pushBack&nbsp;(value, ...)</h3>
+                      <h3 class="text-primary">
+                        List:pushBack&nbsp;(value, ...)
+                      </h3>
                     </dt>
                     <dd>
                       Pushes elements at the end of the list.
@@ -330,7 +326,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:pushFront"></a>
-                      <h3 class="text-primary">List:pushFront&nbsp;(...)</h3>
+                      <h3 class="text-primary">
+                        List:pushFront&nbsp;(...)
+                      </h3>
                     </dt>
                     <dd>
                       Pushes elements at the begining of the list.
@@ -368,7 +366,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:front"></a>
-                      <h3 class="text-primary">List:front&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:front&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Gives the first element of the list.
@@ -393,7 +393,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:back"></a>
-                      <h3 class="text-primary">List:back&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:back&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Gives the last element of the list.
@@ -418,7 +420,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:popBack"></a>
-                      <h3 class="text-primary">List:popBack&nbsp;(n, ...)</h3>
+                      <h3 class="text-primary">
+                        List:popBack&nbsp;(n, ...)
+                      </h3>
                     </dt>
                     <dd>
                       Pops elements from the end of the list.
@@ -466,7 +470,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:popFront"></a>
-                      <h3 class="text-primary">List:popFront&nbsp;(n, t)</h3>
+                      <h3 class="text-primary">
+                        List:popFront&nbsp;(n, t)
+                      </h3>
                     </dt>
                     <dd>
                       Pops elements from the the begining of the list.
@@ -514,7 +520,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "List:each"></a>
-                      <h3 class="text-primary">List:each&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        List:each&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Iterate through the list.
