--- a/prototypes/lux.prototype.html
+++ b/prototypes/lux.prototype.html
@@ -4,7 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>LUX Documentation and Reference</title>
-    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
     <link rel="stylesheet"
     href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <script
@@ -13,6 +12,7 @@
     <script
     src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js">
     </script>
+    <link rel="stylesheet" href="../ldoc.css" type="text/css" />
 </head>
 <body>
 
@@ -56,20 +56,8 @@
                         </li>
                         <li
                           >
-                          <a href="../modules/lux.pack.html">
-                            lux.pack
-                          </a>
-                        </li>
-                        <li
-                          >
                           <a href="../modules/lux.portable.html">
                             lux.portable
-                          </a>
-                        </li>
-                        <li
-                          >
-                          <a href="../modules/lux.std.html">
-                            lux.std
                           </a>
                         </li>
                         <li
@@ -219,7 +207,9 @@
                 <dl class="function">
                     <dt>
                       <a name = "prototype:new"></a>
-                      <h3 class="text-primary">prototype:new&nbsp;(object)</h3>
+                      <h3 class="text-primary">
+                        prototype:new&nbsp;(object)
+                      </h3>
                     </dt>
                     <dd>
                       Creates a new object from a prototype.
@@ -254,7 +244,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "prototype:__super"></a>
-                      <h3 class="text-primary">prototype:__super&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        prototype:__super&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Returns the parent of an object.
@@ -281,7 +273,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "prototype:__bind"></a>
-                      <h3 class="text-primary">prototype:__bind&nbsp;(method_name)</h3>
+                      <h3 class="text-primary">
+                        prototype:__bind&nbsp;(method_name)
+                      </h3>
                     </dt>
                     <dd>
                       Binds a method call.
@@ -336,7 +330,9 @@
                     <div class="row" style="height:2em"></div>
                     <dt>
                       <a name = "prototype:clone"></a>
-                      <h3 class="text-primary">prototype:clone&nbsp;()</h3>
+                      <h3 class="text-primary">
+                        prototype:clone&nbsp;()
+                      </h3>
                     </dt>
                     <dd>
                       Clones the object.
