--- a/index.html
+++ b/index.html
@@ -190,10 +190,7 @@
 Lua 5.3 which provides a handful of features for everyday Lua programming that
 cannot be found in the standard library of the language.</p>
 
-                <p><h2>Let us see</h2>
-
-<p>Well that worked!?</p>
-</p>
+                <p>WIP</p>
 
 
           </div> <!-- id="content" -->
